reset: fixed image width and removed text-align: center from h1-6 and p

--- a/src/reset/_basic.scss
+++ b/src/reset/_basic.scss
@@ -1,17 +1,16 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *:after,
 *:before {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body,
 html {
-  @include text((color: #000));
-  @include margin((all: 0));
-  @include sizes((maxWidth: 100%, minWidth: 100%));
-  @include font((fontFamily: "sans-serif", fontSize: $htmlElementFontSize));
-  @include padding((all: 0));
+    @include margin((all: 0));
+    @include sizes((maxWidth: 100%, minWidth: 100%));
+    @include font((fontFamily: "sans-serif", fontSize: $htmlElementFontSize));
+    @include padding((all: 0));
 }
