--- a/src/settings/_sizes.scss
+++ b/src/settings/_sizes.scss
@@ -1,19 +1,1 @@
-
-$sizesMap: (
-  xxxxs: 0.25rem,
-  xxxs : 0.5rem,
-  xxs  : 0.75rem,
-  xs   : 1rem,
-  sm   : 1.5rem,
-  md   : 2rem,
-  lg   : 3rem,
-  xl   : 4rem,
-  xxl  : 5rem,
-  xxxl : 6rem,
-  xxxxl: 7rem,
-  bigSm: 10rem,
-  bigMd: 14rem,
-  bigLg: 18rem,
-  bigXl: 22rem
-)
-!default;
+$sizesMap: ( xxxxs: 0.25rem, xxxs: 0.5rem, xxs: 0.75rem, xs: 1rem, sm: 1.5rem, md: 2rem, lg: 3rem, xl: 4rem, xxl: 5rem, xxxl: 6rem, xxxxl: 7rem, bigSm: 10rem, bigMd: 14rem, bigLg: 18rem, bigXl: 22rem) !default;
